[tool.poetry]
name = "instax_photo_converter"
version = "0.1.0"
description = "Simple CLI for processing images to be printable from the instax SQ 10 camera"
authors = ["Elias Posen <elias@posen.ch>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^7.2.0"
pygame = "^2.0.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"

[tool.poetry.scripts]
instax-convert = "instax_photo_converter.convert:convert"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


